@@ -27,7 +27,7 @@
                   tal:attributes="action here_url">
             
                 <metal:listing define-macro="folder_listing"
-                               tal:define="use_view_action site_properties/typesUseViewActionInListings|python:();">
+                               tal:define="use_view_action python:context.portal_registry.get('plone.types_view_action_in_listings', []);">
 
                     <div class="visualClear" id="clear-space-before-navigation"><!-- --></div>
 
